--- a/bower.json
+++ b/bower.json
@@ -12,11 +12,14 @@
     "angular-sanitize": "1.5.9-build.5052+sha.39a3b58",
     "angular-route": "1.5.9-build.5055+sha.138fbf0",
     "font-awesome": "4.7.0",
-    "jquery": "1.12.4"
+    "jquery": "1.12.4",
+    "bootstrap-material-design": "4.0.2"
   },
   "homepage": "zimple.io",
   "resolutions": {
     "angular": "1.5.9-build.5055+sha.138fbf0",
-    "angular-mocks": "1.5.9-build.5105+sha.d80cdeb"
+    "angular-mocks": "1.5.9-build.5105+sha.d80cdeb",
+    "jquery": "1.9.1 - 3",
+    "bootstrap": "3.3.7"
   }
 }
