--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "gulp",
-    "setup": "npm install && bower install --force && npm update && bower update --force"
+    "run" : "node ./bin/www",
+    "dev_mode": "gulp",
+    "setup": "npm install && bower install --force && npm update && bower update --force",
+    "create_api" : "node ./bin/create_api.js"
+
   },
   "dependencies": {
     "body-parser": "~1.15.2",
@@ -20,6 +23,7 @@
     "gulp-uglify": "2.0.0",
     "gulp-clean-css": "2.0.13",
     "bower": "1.7.9",
-    "gulp-nodemon":"2.2.1"
+    "gulp-nodemon":"2.2.1",
+    "create-file" : "1.0.1"
   }
 }
