connected to db

--- a/config.json
+++ b/config.json
@@ -3,5 +3,5 @@
   "company_name": "ZIMPLE.IO",
   "version": 0.1,
   "description": "This is an App Seed utilizing Mongdb Express Angular and Node.",
-  "db_connect_string": "mongodb://<dbuser>:<dbpassword>@ds133348.mlab.com:33348/amaber"
+  "db_connect_string": "mongodb://seedUser:seedPass@zimple.io:27017/SEEDS"
 }
