--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "cookie-parser": "~1.4.3",
     "debug": "~2.2.0",
     "express": "~4.14.0",
-    "mongoose":"4.7.5",
+    "mongoose": "4.7.5",
     "gulp": "~3.9.1",
     "gulp-util": "3.0.7",
     "gulp-concat": "2.6.0",
@@ -23,6 +23,7 @@
     "gulp-typescript": "3.0.2",
     "gulp-uglify": "2.0.0",
     "gulp-clean-css": "2.0.13",
+    "gulp-node-inspector":"0.1.0",
     "bower": "1.7.9",
     "gulp-nodemon": "2.2.1",
     "create-file": "1.0.1",
