--- a/bower.json
+++ b/bower.json
@@ -13,7 +13,8 @@
     "angular-route": "1.5.9-build.5055+sha.138fbf0",
     "font-awesome": "4.7.0",
     "jquery": "1.12.4",
-    "bootstrap-material-design": "0.5.10"
+    "bootstrap-material-design": "0.5.10",
+    "tether": "1.4.0"
   },
   "homepage": "zimple.io",
   "resolutions": {
